<?xml version="1.0" encoding="utf-8"?>

<!--
Definição do Scroll View para que a tela de adapte ao modo Paisagem
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".ui.LoginActivity">
    <!--
    Definição do Constraint Layout
    -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        tools:context=".ui.LoginActivity">

        <!--
        Definição da imagem do Logo
        -->
        <ImageView
            android:id="@+id/idLogoEmLogin"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/content_description_logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--
        Definição do TextInputLayout que inicialmente monta um texto no Layout,
        mas quando o usuário clica nele para digitar algo, o texto vai para cima.
        O nome desse tal texto que muda de posição é hint.
        Também faz com que uma senha possa ou não ser visível caso um botão no fim
        da linha esteja ativado.
        Também permite que sejam mostradas mensagens de erro saindo do campo de
        escrita.
        -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/idTextInputLayoutEmailEmLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idLogoEmLogin">

            <!--
            A TextInputEditText deve ser usada como filha de TextInputLayout
            Sendo usado, permite a exibição do hint.
            O inputType é text.
            Aqui o máximo de linhas a serem exibidas é definido como 1.
            -->
            <android.support.design.widget.TextInputEditText
                android:id="@+id/idEmailEmLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <!--
        Aqui o passwordToggleEnabled faz com que apareça no final do campo de escrever
        texto um botão que faz uma senha ser visível ou não.
        -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/idTextInputLayoutSenhaEmLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/idTextInputLayoutEmailEmLogin"
            app:passwordToggleEnabled="true">

            <!--
            O inputType textPassword faz com que o texto possa ser oculto
            -->
            <android.support.design.widget.TextInputEditText
                android:id="@+id/idSenhaEmLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/idBtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="60dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/idBtnCadastroEmLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTextInputLayoutSenhaEmLogin" />

        <TextView
            android:id="@+id/idPerguntaParaCadastroEmLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="6dp"
            android:text="@string/pergunta_para_cadastro"
            app:layout_constraintBottom_toTopOf="@+id/idBtnCadastroEmLogin"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/idBtnCadastroEmLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorAccentDark"
            android:text="@string/cadastre_se"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>